Namespaces were corrected

--- a/ChatClient/MVVM/Views/AdditionalViews/ChangeUserSettingsView.xaml
+++ b/ChatClient/MVVM/Views/AdditionalViews/ChangeUserSettingsView.xaml
@@ -1,12 +1,12 @@
-﻿<UserControl x:Class="ChatClient.Views.AdditionalViews.ChangeUserSettingsView"
+﻿<UserControl x:Class="ChatClient.MVVM.Views.AdditionalViews.ChangeUserSettingsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:ChatClient.Views.AdditionalViews"
+             xmlns:local="clr-namespace:ChatClient.MVVM.Views.AdditionalViews"
              xmlns:sharedItems="clr-namespace:SharedItems.Enums;assembly=SharedItems"
-             xmlns:additionalViews="clr-namespace:ChatClient.Views.AdditionalViews" 
-             xmlns:viewmodels="clr-namespace:ChatClient.ViewModels" 
+             xmlns:additionalViews="clr-namespace:ChatClient.MVVM.Views.AdditionalViews" 
+             xmlns:viewmodels="clr-namespace:ChatClient.MVVM.ViewModels" 
              xmlns:validators="clr-namespace:ChatClient.Validators"
              d:DataContext="{d:DesignInstance Type=viewmodels:ChatViewModel}"
              mc:Ignorable="d" 
