--- a/ChatClient/Resources/PasswordBox.xaml
+++ b/ChatClient/Resources/PasswordBox.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:additionalViews="clr-namespace:ChatClient.Views.AdditionalViews" 
+                    xmlns:additionalViews="clr-namespace:ChatClient.MVVM.Views.AdditionalViews" 
                     xmlns:validators="clr-namespace:ChatClient.Validators">
 
     <ControlTemplate x:Key="validationTemplate">
