--- a/ChatClient/MVVM/Views/AdditionalViews/ConnectionLostView.xaml
+++ b/ChatClient/MVVM/Views/AdditionalViews/ConnectionLostView.xaml
@@ -1,10 +1,10 @@
-﻿<UserControl x:Class="ChatClient.Views.AdditionalViews.ConnectionLostView"
+﻿<UserControl x:Class="ChatClient.MVVM.Views.AdditionalViews.ConnectionLostView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:ChatClient.Views" 
-             xmlns:viewmodels="clr-namespace:ChatClient.ViewModels" 
+             xmlns:local="clr-namespace:ChatClient.MVVM.Views" 
+             xmlns:viewmodels="clr-namespace:ChatClient.MVVM.ViewModels" 
              d:DataContext="{d:DesignInstance Type=viewmodels:ChatViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
