--- a/ChatClient/MVVM/Views/AdditionalViews/PrivateChatView.xaml
+++ b/ChatClient/MVVM/Views/AdditionalViews/PrivateChatView.xaml
@@ -1,15 +1,17 @@
-﻿<UserControl x:Class="ChatClient.Views.AdditionalViews.PrivateChatView"
+﻿<UserControl x:Class="ChatClient.MVVM.Views.AdditionalViews.PrivateChatView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:ChatClient.Views.AdditionalViews"
+             xmlns:local="clr-namespace:ChatClient.MVVM.Views.AdditionalViews"
              xmlns:converters="clr-namespace:ChatClient.Converters"
-             xmlns:controls="clr-namespace:ChatClient.Controls"
-             xmlns:additionalViews="clr-namespace:ChatClient.Views.AdditionalViews"
-             xmlns:extensions="clr-namespace:ChatClient.Extensions"
+             xmlns:controls="clr-namespace:ChatClient.Supplements.Controls"
+             xmlns:additionalViews="clr-namespace:ChatClient.MVVM.Views.AdditionalViews"
+             xmlns:extensions="clr-namespace:ChatClient.Supplements.Extensions"
              xmlns:sharedItems="clr-namespace:SharedItems.Enums;assembly=SharedItems"
-             xmlns:i="http://schemas.microsoft.com/xaml/behaviors" xmlns:viewmodels="clr-namespace:ChatClient.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:ChatViewModel}"
+             xmlns:i="http://schemas.microsoft.com/xaml/behaviors" 
+             xmlns:viewmodels="clr-namespace:ChatClient.MVVM.ViewModels"
+             d:DataContext="{d:DesignInstance Type=viewmodels:ChatViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="550">
     <UserControl.Resources>
