--- a/ChatClient/MVVM/Views/AdditionalViews/UserInfoView.xaml
+++ b/ChatClient/MVVM/Views/AdditionalViews/UserInfoView.xaml
@@ -1,11 +1,11 @@
-﻿<UserControl x:Class="ChatClient.Views.AdditionalViews.UserInfoView"
+﻿<UserControl x:Class="ChatClient.MVVM.Views.AdditionalViews.UserInfoView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:ChatClient.Views.AdditionalViews"
+             xmlns:local="clr-namespace:ChatClient.MVVM.Views.AdditionalViews"
              xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
-             xmlns:viewmodels="clr-namespace:ChatClient.ViewModels" 
+             xmlns:viewmodels="clr-namespace:ChatClient.MVVM.ViewModels" 
              d:DataContext="{d:DesignInstance Type=viewmodels:ChatViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
