--- a/ChatClient/MVVM/Views/BanView.xaml
+++ b/ChatClient/MVVM/Views/BanView.xaml
@@ -1,9 +1,10 @@
-﻿<UserControl x:Class="ChatClient.Views.BanView"
+﻿<UserControl x:Class="ChatClient.MVVM.Views.BanView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:ChatClient.Views" xmlns:viewmodels="clr-namespace:ChatClient.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:BanViewModel}"
+             xmlns:local="clr-namespace:ChatClient.MVVM.Views" 
+             xmlns:viewmodels="clr-namespace:ChatClient.MVVM.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:BanViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Background="White">
