--- a/ChatClient/MVVM/Views/ChatView.xaml
+++ b/ChatClient/MVVM/Views/ChatView.xaml
@@ -1,17 +1,17 @@
-﻿<UserControl x:Class="ChatClient.Views.ChatView"
+﻿<UserControl x:Class="ChatClient.MVVM.Views.ChatView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:ChatClient.Views" 
-             xmlns:viewmodels="clr-namespace:ChatClient.ViewModels" 
-             xmlns:additionalViews="clr-namespace:ChatClient.Views.AdditionalViews"
+             xmlns:local="clr-namespace:ChatClient.MVVM.Views" 
+             xmlns:viewmodels="clr-namespace:ChatClient.MVVM.ViewModels" 
+             xmlns:additionalViews="clr-namespace:ChatClient.MVVM.Views.AdditionalViews"
              xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
              xmlns:converters="clr-namespace:ChatClient.Converters"
              xmlns:enums="clr-namespace:SharedItems.Enums;assembly=SharedItems"
              xmlns:wpf="clr-namespace:CefSharp.Wpf;assembly=CefSharp.Wpf"
-             xmlns:helpers="clr-namespace:ChatClient.Helpers"
-             xmlns:controls="clr-namespace:ChatClient.Controls"
+             xmlns:helpers="clr-namespace:ChatClient.Supplements.Helpers"
+             xmlns:controls="clr-namespace:ChatClient.Supplements.Controls"
              xmlns:sharedItems="clr-namespace:SharedItems.Enums;assembly=SharedItems"
              d:DataContext="{d:DesignInstance Type=viewmodels:ChatViewModel}"
              mc:Ignorable="d" 
