--- a/ChatClient/MVVM/Views/LoginView.xaml
+++ b/ChatClient/MVVM/Views/LoginView.xaml
@@ -1,12 +1,13 @@
-﻿<UserControl x:Class="ChatClient.Views.LoginView"
+﻿<UserControl x:Class="ChatClient.MVVM.Views.LoginView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:ChatClient.Views"
+      xmlns:local="clr-namespace:ChatClient.MVVM.Views"
       xmlns:converters="clr-namespace:ChatClient.Converters"
-             xmlns:additionaViews="clr-namespace:ChatClient.Views.AdditionalViews" 
-             xmlns:validators="clr-namespace:ChatClient.Validators" xmlns:viewmodels="clr-namespace:ChatClient.ViewModels" 
+             xmlns:additionaViews="clr-namespace:ChatClient.MVVM.Views.AdditionalViews" 
+             xmlns:validators="clr-namespace:ChatClient.Validators"
+             xmlns:viewmodels="clr-namespace:ChatClient.MVVM.ViewModels" 
              d:DataContext="{d:DesignInstance Type=viewmodels:LoginViewModel}"
              mc:Ignorable="d" 
       d:DesignHeight="500" d:DesignWidth="600">
