--- a/ChatClient/MVVM/Views/RegistrationView.xaml
+++ b/ChatClient/MVVM/Views/RegistrationView.xaml
@@ -1,11 +1,11 @@
-﻿<UserControl x:Class="ChatClient.Views.RegistrationView"
+﻿<UserControl x:Class="ChatClient.MVVM.Views.RegistrationView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:ChatClient.Views"
-             xmlns:additionalViews="clr-namespace:ChatClient.Views.AdditionalViews"
-             xmlns:viewmodels="clr-namespace:ChatClient.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:RegistrationViewModel}"
+             xmlns:local="clr-namespace:ChatClient.MVVM.Views"
+             xmlns:additionalViews="clr-namespace:ChatClient.MVVM.Views.AdditionalViews"
+             xmlns:viewmodels="clr-namespace:ChatClient.MVVM.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:RegistrationViewModel}"
              xmlns:validators="clr-namespace:ChatClient.Validators" 
              mc:Ignorable="d" 
              d:DesignHeight="800" d:DesignWidth="800"
