--- a/ChatClient/Resources/Grid.xaml
+++ b/ChatClient/Resources/Grid.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:additionalViews="clr-namespace:ChatClient.Views.AdditionalViews"
+                    xmlns:additionalViews="clr-namespace:ChatClient.MVVM.Views.AdditionalViews"
                     xmlns:i="http://schemas.microsoft.com/xaml/behaviors">
 
     <LinearGradientBrush x:Key="typeMessageGridColors" StartPoint="0.5,0" EndPoint="0.5,1">
