--- a/ChatClient/Resources/ScrollBar.xaml
+++ b/ChatClient/Resources/ScrollBar.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:extensions="clr-namespace:ChatClient.Extensions">
+                    xmlns:extensions="clr-namespace:ChatClient.Supplements.Extensions">
     <Style x:Key="ScrollThumbs" TargetType="{x:Type Thumb}">
         <Setter Property="Template">
             <Setter.Value>
