--- a/ChatClient/Resources/ListBox.xaml
+++ b/ChatClient/Resources/ListBox.xaml
@@ -267,8 +267,7 @@
         <Setter Property="ItemsPanel">
             <Setter.Value>
                 <ItemsPanelTemplate>
-                    <VirtualizingStackPanel IsVirtualizing="True"
-                              VirtualizationMode="Recycling" />
+                    <VirtualizingStackPanel IsVirtualizing="True"/>
                 </ItemsPanelTemplate>
             </Setter.Value>
         </Setter>
