--- a/ChatClient/Resources/Border.xaml
+++ b/ChatClient/Resources/Border.xaml
@@ -87,4 +87,13 @@
         <Setter Property="Margin" Value="5,5,0,5"/>
         <Setter Property="Background" Value="{StaticResource typeMessageGridColors}"/>
     </Style>
+
+    <Style x:Key="messagesBorder" TargetType="{x:Type Border}">
+        <Setter Property="CornerRadius" Value="5"/>
+        <Setter Property="Margin" Value="5"/>
+        <Setter Property="Padding" Value="5,5,10,5"/>
+        <Setter Property="MaxWidth" Value="400"/>
+        <Setter Property="HorizontalAlignment" Value="Left"/>
+        <Setter Property="Background" Value="#D1D3EE"/>
+    </Style>
 </ResourceDictionary>
